# modern-cmake-practice

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: deploy_dependencies.cmake  deploy_dependencies.ps1
examples/: CMakeLists.txt  QHelloWorld.cpp
libs/: CMakeLists.txt
libs/dyn/: CMakeLists.txt
libs/dyn/data/: libraries.txt
libs/dyn/examples/: CMakeLists.txt  app_dyn.cpp
libs/dyn/include/dyn/: dyn.hpp
libs/dyn/py/: CMakeLists.txt  py_dyn.cpp
libs/dyn/src/: dyn.cpp
scripts/: filehash.py  project.py
scripts/template/: library.jinja.cmake  package_config.cmake  project.jinja.cmake
